# cookiecutter-pyspark-databricks-serverless

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  databricks.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: README.md  api.md  deployment.md  usage.md
{{cookiecutter.project_slug}}/tests/: __init__.py  test_main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  main.py
